# 2023-Capstone-main-2

./: README.md
v7a Sept 2023/catkin_ws/devel/: .catkin  _setup_util.py  setup.sh
v7a Sept 2023/catkin_ws/devel/lib/dynamixel_sdk/: port_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py
v7a Sept 2023/catkin_ws/devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
v7a Sept 2023/catkin_ws/devel/lib/mapper/: mapper_node
v7a Sept 2023/catkin_ws/devel/lib/pkgconfig/: dynamixel_sdk.pc  dynamixel_sdk_examples.pc  mapper.pc  transcent_urdf.pc  urdf-rviz.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pcl.pc  velodyne_pointcloud.pc
v7a Sept 2023/catkin_ws/devel/lib/velodyne_driver/: velodyne_node
v7a Sept 2023/catkin_ws/devel/lib/velodyne_laserscan/: velodyne_laserscan_node
v7a Sept 2023/catkin_ws/devel/lib/velodyne_pointcloud/: transform_node
v7a Sept 2023/catkin_ws/install/: _setup_util.py  local_setup.sh
v7a Sept 2023/catkin_ws/install/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
v7a Sept 2023/catkin_ws/install/lib/mapper/: mapper_node
v7a Sept 2023/catkin_ws/src/: shared_variable.txt  test_kivy2.py
v7a Sept 2023/catkin_ws/src/mapper/: CMakeLists.txt
v7a Sept 2023/catkin_ws/src/mapper/src/: mapper_node.cpp
v7a Sept 2023/catkin_ws/src/transcent_urdf/: urdf.rviz
v7a Sept 2023/catkin_ws/src/urdf-rviz/: CMakeLists.txt  package.xml  shared_variable.txt
(+97 files in other folders)
